<resources>
    <string name="app_name">ujian_design</string>
    <string name="menu_main_home">Home</string>
    <string name="menu_main_feed">Feed</string>
    <string name="menu_main_official_store">Official store</string>
    <string name="menu_main_wishlist">Wishlist</string>
    <string name="menu_main_transaksi">transaksi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- String Menu Scroll   -->
    <string name="menu_tokped_1">Official\nStore</string>
    <string name="menu_tokped_2">Lihat\nSemua</string>
    <string name="menu_tokped_3">Elektronik</string>
    <string name="menu_tokped_4">Kebutuhan\nHarian</string>
    <string name="menu_tokped_5">Top-Up &amp;\nTagihan</string>
    <string name="menu_tokped_6">Office &amp;\nStationery</string>
    <string name="menu_tokped_7">Keuangan</string>
    <string name="menu_tokped_8">Travel &amp;\nEntertaiment</string>
    <string name="menu_tokped_9">Perlengkapan\nPesta</string>

    <string name="scnd_menu_tokped_1">Peduli\nLindungi</string>
    <string name="scnd_menu_tokped_2">Bazar Hari\nIni</string>
    <string name="scnd_menu_tokped_3">Live\nShopping</string>
    <string name="scnd_menu_tokped_4">Tokopedia\nSeru</string>
    <string name="scnd_menu_tokped_5">Bangga\nLokal</string>
    <string name="scnd_menu_tokped_6">Bayar di\nTempat</string>
    <string name="scnd_menu_tokped_7">Promo di\nSurabaya</string>
    <string name="iklan">Iklan</string>
    <string name="video_title">Video menarik untukmu</string>
    <string name="see_more_video">Lihat Semua</string>
    <string name="watcher_video_title">2.5 rb</string>
    <string name="dummy_diskon">Diskon 70%</string>
    <string name="dummy_video_title_diskon">Alat facial treatment cuman 100rb?</string>
    <string name="dummy_video_store">Hafiedh store</string>
    <string name="menu_main_official_store_menu">Official Store</string>
    <string name="edt_search">Cari di Tokopedia</string>
    <string name="top_background_green">top background green</string>
    <string name="icon_location">icon location</string>
    <string name="tv_address">Dikirim ke </string>
    <string name="tv_address_detail">Jl Imam Bonjol kp.durian</string>
    <string name="gopay_image">gopay image</string>
    <string name="tv_gopay"><![CDATA[GoPay & Coins]]></string>
    <string name="tv_aktifkan">Aktifkan</string>
    <string name="member_image">member image</string>
    <string name="tv_member_silver">Member Silver</string>
    <string name="tv_kupon">23 Kupon Baru</string>
    <string name="menu_message">message</string>
    <string name="menu_notification">notification</string>
    <string name="menu_shopping">shopping</string>
    <string name="menu_hamburger">menu</string>
    <string name="icon_dropdown">icon dropdown</string>
    <string name="icon_menu">icon menu</string>
    <string name="icon_shopping">icon shopping</string>
    <string name="icon_notification">icon notification</string>
    <string name="icon_message">icon message</string>
    <string name="tv_kejar_diskon">Kejar Diskon</string>
    <string name="tv_berakhir_dalam">Berakhir Dalam</string>
    <!--  End String Menu Scroll  -->

</resources>