<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/video_thumbnail"
            android:layout_width="160dp"
            android:layout_height="170dp"
            android:foreground="#1A000000"
            android:src="@drawable/bug"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/video_watch_count"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:alpha="0.6"
            android:background="@drawable/rounded_bg_item"
            android:drawablePadding="5dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/watcher_video_title"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_eye"
            app:layout_constraintStart_toStartOf="@id/video_thumbnail"
            app:layout_constraintTop_toTopOf="@+id/video_thumbnail" />

        <TextView
            android:id="@+id/video_diskon"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_bg_item_green"
            android:drawablePadding="5dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/dummy_diskon"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_discount"
            app:layout_constraintBottom_toBottomOf="@+id/video_thumbnail"
            app:layout_constraintStart_toStartOf="@+id/video_thumbnail" />

        <TextView
            android:id="@+id/video_title"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:text="@string/dummy_video_title_diskon"
            android:textColor="#4e524f"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_thumbnail" />

        <TextView
            android:id="@+id/video_title_store"
            android:layout_width="160dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:text="@string/dummy_video_store"
            android:textColor="#676b68"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>